# capeit

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  capeit.desktop  capeitd.service  gmode  gmode-gui-plan.md  install.sh
capeit-common/: Cargo.toml
capeit-common/src/: lib.rs
capeit-gui/: Cargo.toml  build.rs
capeit-gui/src/: app.slint  main.rs  sys_info.rs  telemetry.rs  theme.slint  utils.rs  widgets.slint
capeitd/: Cargo.toml
capeitd/src/: main.rs
