[package]
name = "capeit-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
capeit-common = { path = "../capeit-common" }
slint = "1.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tiny-skia = "0.11"
bytemuck = "1.14"

[build-dependencies]
slint-build = "1.9"
