[package]
name = "capeit-gui"
version = "0.2.7"
edition = "2021"

[dependencies]
capeit-common = { path = "../capeit-common" }
slint = "1.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"

[build-dependencies]
slint-build = "1.16"
lucide-slint = "1.16"
