[package]
name = "capeitd"
version = "0.2.2"
edition = "2021"

[dependencies]
capeit-common = { path = "../capeit-common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.20"
toml = "0.8"
dirs = "5.0"
